add Jenkins fav PR shortcut

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Be there!</title>
   <style>
@@ -13,8 +13,8 @@
       margin: 0;
       padding: 0;
       border: 0;
-      font-size: 100%;
       font: inherit;
+      font-size: 100%;
       vertical-align: baseline;
     }
     table {
@@ -32,6 +32,9 @@
     td:first-child {
       width: 33%;
     }
+    h1 {
+      margin-top: 0;
+    }
   </style>
 </head>
 <body>
@@ -39,10 +42,23 @@
   <p>Use keyboard shortcuts to navigate:</p>
   <table>
     <tr>
-      <td>Cmd+1</td>
-      <td>Open Searchlight pull requests</td>
+      <td>Ctrl+Shift+1</td>
+      <td>GitHub Enterprise: open FRSH pull requests</td>
+    </tr>
+    <tr>
+      <td>Ctrl+Shift+2</td>
+      <td>Jira: FRSH Kanban board</td>
+    </tr>
+    <tr>
+      <td>Ctrl+Shift+3</td>
+      <td>Jira: FRSH user story map</td>
+    </tr>
+    <tr>
+      <td>Ctrl+Shift+4</td>
+      <td>Jenkins: favourite pull requests</td>
     </tr>
   </table>
+  <br>
 </body>
 </html>
 
